share-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: share-service-deployment
  labels:
    app: share-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: share-service
  template:
    metadata:
      labels:
        app: share-service
    spec:
      containers:
      - name: share-service
        image: registry.cloud.sdu.dk/sdu-cloud/share-service:1.6.5
        livenessProbe:
          httpGet:
            port: 8080
            path: /status
          initialDelaySeconds: 3
          periodSeconds: 30
          failureThreshold: 5
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        - --config-dir
        - /etc/psql
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation
        - mountPath: /etc/psql
          name: share-psql

      volumes:
      - name: refresh-token
        secret:
          optional: false
          secretName: share-refresh-token
      - name: token-validation
        configMap:
          name: token-validation
          defaultMode: 420
      - name: share-psql
        secret:
          optional: false
          secretName: share-psql

      imagePullSecrets:
        - name: esci-docker
