share-service/k8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: share
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: shares
      prefix: /api/shares/
      service: share-service:8080
      rewrite: ""

spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: share-service
